@@ -1221,6 +1221,19 @@ void SV_Frame (float time)
 }
 
 
+/* cvar callback functions : */
+static void Callback_Deathmatch (cvar_t *var)
+{
+	if (var->integer)
+		Cvar_Set ("coop", "0");
+}
+
+static void Callback_Coop (cvar_t *var)
+{
+	if (var->integer)
+		Cvar_Set ("deathmatch", "0");
+}
+
 /*
 ===============
 SV_InitLocal
@@ -1259,6 +1272,8 @@ static void SV_InitLocal (void)
 	Cvar_RegisterVariable (&skill);
 	Cvar_RegisterVariable (&coop);
 	Cvar_RegisterVariable (&deathmatch);
+	Cvar_SetCallback (&coop, Callback_Coop);
+	Cvar_SetCallback (&deathmatch, Callback_Deathmatch);
 	Cvar_RegisterVariable (&randomclass);
 	Cvar_RegisterVariable (&damageScale);
 	Cvar_RegisterVariable (&meleeDamScale);
